--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
         "php": "^5.5|^7.0"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.8",
+        "phpunit/phpunit": "^4.8|^5.3",
         "phpunit/php-invoker": "^1.1"
     },
     "autoload": {
