--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,8 @@
     "minimum-stability": "dev",
     "prefer-stable": true,
     "require": {
-        "php": "^5.5 || ^7.0"
+        "php": "^5.5 || ^7.0",
+        "ext-mcrypt": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.3",
