--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,7 @@
     "prefer-stable": true,
     "require": {
         "php": "^5.5 || ^7.0",
-        "ext-mcrypt": "*"
+        "ext-openssl": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.3",
