--- a/.travis.yml
+++ b/.travis.yml
@@ -7,6 +7,8 @@ php:
   - 7.1
 
 env:
+  global:
+    - COMPOSER_NO_INTERACTION=1
   matrix:
     - DEPENDENCIES=lowest
     - DEPENDENCIES=highest
@@ -31,9 +33,9 @@ before_install:
   - composer self-update
 
 install:
-  - if [ -z $DEPENDENCIES ]; then composer install -n; fi;
-  - if [ $DEPENDENCIES = lowest ]; then composer update --prefer-lowest -n; fi;
-  - if [ $DEPENDENCIES = highest ]; then composer update -n; fi;
+  - if [ -z $DEPENDENCIES ]; then composer install; fi;
+  - if [ $DEPENDENCIES = lowest ]; then composer update --prefer-lowest; fi;
+  - if [ $DEPENDENCIES = highest ]; then composer update; fi;
 
 script:
   - if [[ $COVERAGE = yes ]]; then bin/phpunit --verbose; else bin/phpunit --verbose --no-coverage; fi
