Switch to build a coverage report only on demand

--- a/.travis.yml
+++ b/.travis.yml
@@ -38,7 +38,7 @@ install:
   - if [ $COMPOSER_DEPENDENCIES = highest ]; then composer update; fi;
 
 script:
-  - if [[ $COVERAGE = yes ]]; then bin/phpunit --verbose; else bin/phpunit --verbose --no-coverage; fi
+  - if [[ $COVERAGE = yes ]]; then bin/phpunit --coverage-clover=build/coverage.xml; else bin/phpunit; fi
 
 after_script:
   - if [[ $COVERAGE = yes ]]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover build/coverage.xml; fi
