Remove env variables from the hhvm build

--- a/.travis.yml
+++ b/.travis.yml
@@ -19,6 +19,7 @@ matrix:
       env: COVERAGE=yes
     - php: nightly
     - php: hhvm
+      env: true
   allow_failures:
     - php: nightly
     - php: hhvm
