--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,7 @@ php:
   - 5.6
   - 7.0
   - 7.1
+  - nightly
 
 env:
   global:
@@ -17,7 +18,6 @@ matrix:
   include:
     - php: 7.0
       env: COVERAGE=yes
-    - php: nightly
     - php: hhvm
       env: true
   allow_failures:
