--- a/.travis.yml
+++ b/.travis.yml
@@ -5,7 +5,6 @@ php:
   - 5.6
   - 7.0
   - 7.1
-  - nightly
 
 env:
   global:
@@ -18,6 +17,8 @@ matrix:
   include:
     - php: 7.0
       env: COVERAGE=yes
+    - nightly
+      env: COMPOSER_DEPENDENCIES=highest
     - php: hhvm
   allow_failures:
     - php: nightly
