--- a/.travis.yml
+++ b/.travis.yml
@@ -20,6 +20,7 @@ matrix:
     - php: nightly
       env: COMPOSER_DEPENDENCIES=highest
     - php: hhvm
+      env:
   allow_failures:
     - php: nightly
     - php: hhvm
