--- a/.travis.yml
+++ b/.travis.yml
@@ -1,31 +1,41 @@
 language: php
 
-cache:
-  directories:
-    - $HOME/.composer/cache/files
+php:
+  - 5.5
+  - 5.6
+  - 7.0
+  - 7.1
+  - nightly
+  - hhvm
+
+env:
+  global:
+    - COMPOSER_NO_INTERACTION=1
+  matrix:
+    - COMPOSER_DEPENDENCIES=lowest
+    - COMPOSER_DEPENDENCIES=highest
 
 matrix:
-  include:
-    - php: 5.5
-    - php: 5.6
-    - php: 7.0
-      env: COVERAGE=yes
-    - php: nightly
-    - php: hhvm
   allow_failures:
     - php: nightly
     - php: hhvm
   fast_finish: true
 
+cache:
+  directories:
+    - $HOME/.composer/cache/files
+
 before_install:
-  - if [[ $TRAVIS_PHP_VERSION != hhvm && $COVERAGE != yes ]]; then phpenv config-rm xdebug.ini; fi;
+  - if [[ $TRAVIS_PHP_VERSION = 7.0 && $COMPOSER_DEPENDENCIES = highest ]]; then COVERAGE=yes; fi;
+  - if [[ $TRAVIS_PHP_VERSION != nightly && $TRAVIS_PHP_VERSION != hhvm && $COVERAGE != yes ]]; then phpenv config-rm xdebug.ini; fi;
   - composer self-update
 
 install:
-  - composer install --prefer-dist --no-interaction
+  - if [[ $COMPOSER_DEPENDENCIES = lowest ]]; then composer update --prefer-lowest; fi;
+  - if [[ $COMPOSER_DEPENDENCIES = highest ]]; then composer update; fi;
 
 script:
-  - if [[ $COVERAGE = yes ]]; then bin/phpunit --verbose; else bin/phpunit --verbose --no-coverage; fi
+  - if [[ $COVERAGE = yes ]]; then bin/phpunit --coverage-clover=build/coverage.xml; else bin/phpunit; fi
 
 after_script:
   - if [[ $COVERAGE = yes ]]; then wget https://scrutinizer-ci.com/ocular.phar && php ocular.phar code-coverage:upload --format=php-clover build/coverage.xml; fi
