--- a/composer.json
+++ b/composer.json
@@ -14,7 +14,8 @@
     "prefer-stable": true,
     "require": {
         "php": "^5.5 || ^7.0",
-        "ext-openssl": "*"
+        "ext-openssl": "*",
+        "lib-openssl": "^1.0.2"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.3",
