--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
     "require": {
         "php": "^5.5 || ^7.0",
         "ext-openssl": "*",
-        "lib-openssl": "^1.0.2"
+        "lib-openssl": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.8|^5.3",
